--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.6.0",
     "pino": "^9.1.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "typescript": "^5.6.2"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/test/**",
+      "**/docs/**",
+      "**/auth/**"
+    ],
+    "delay": 2500,
+    "ext": "ts",
+    "exec": "npx tsc && node ./dist/index.js" 
   }
 }
