try fix main script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "version": "1.0.0",
   "description": "An extensible WhatsApp Bot with features like tag everyone or create custom roles",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/tichnas/WhatsApp-Bot.git"
