--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "build": "npx tsc"
   },
   "license": "ISC",
   "dependencies": {
@@ -30,6 +31,6 @@
     ],
     "delay": 2500,
     "ext": "ts",
-    "exec": "npx tsc && node ./dist/index.js" 
+    "exec": "npx tsc && node ./dist/index.js"
   }
 }
