--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.6.0",
+    "cache-manager-mongodb": "^0.3.0",
+    "mongodb": "^6.9.0",
     "pino": "^9.1.0",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.6.2"
