--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@whiskeysockets/baileys": "^6.6.0",
     "cache-manager-mongodb": "^0.3.0",
     "mongodb": "^6.9.0",
+    "openai": "^4.63.0",
+    "openai-function-calling-tools": "^6.8.0",
     "pino": "^9.1.0",
     "qrcode-terminal": "^0.12.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   },
   "nodemonConfig": {
     "ignore": [
